--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -273,7 +273,7 @@ top: 2.3vw;
   height: 5.65vw;
   background-repeat: no-repeat;
   right: 25.4vw;
-  top: 50.2vw;
+  bottom: 6.6vw;
 }
 .koliz {
   position: absolute;
