--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -398,17 +398,36 @@ margin-right: 1.7vw;
 }
 .cow {
   position: absolute;
-  background-color: green;
-  width: 20px;
-  height: 20px;
-  top: 10vw;
-  left: 30vw;
+  background: url("../images/sheep.svg") no-repeat 0% 0%;
+  background-size: cover;
+  width: 2.86vw;
+  height: 3.39vw;
+overflow: hidden;
+  opacity: 0;
+  transition: 0.5s;
 }
-.none {
-  display: none;
+.lol {
+  top: 11vw;
+    left: 28vw;
+}
+.lal {
+  top: 5.5vw;
+  left: 30.8vw;
+}
+.lel {
+  top: 10vw;
+    left: 35vw;
+}
+.kill {
+  animation: sheep 1s steps(10);
+  animation-fill-mode: forwards;
+}
+@keyframes sheep {
+  from { background-position: 0 0; }
+    to { background-position: 100% 0; }
 }
 .block {
-  display: block;
+  opacity: 1;
 }
 .fire {
   position: absolute;
