--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -213,6 +213,7 @@
   background-color: #EFEFEF;
   margin-left: 0.83vw;
   margin-right: 0.83vw;
+  transition: opacity 0.5s ease;
 }
 .cloth {
   top: 65.5vh;
@@ -403,6 +404,7 @@ margin-right: 1.7vw;
   width: 2.86vw;
   height: 3.39vw;
 overflow: hidden;
+display: none;
   opacity: 0;
   transition: 0.5s;
 }
@@ -438,6 +440,7 @@ overflow: hidden;
 }
 .block {
   opacity: 1;
+  display: block;
 }
 .fire {
   position: absolute;
@@ -842,7 +845,7 @@ transition: transform 0.5s ease;
 }
 
 .active {
-  /* border: 0.01vw solid white; */
+  border: 0.01vw solid white;
   background-color: transparent;
   transform-origin: center center;
   transform: scale(6);
