--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -127,8 +127,8 @@
   background-image: url("../images/f1oo.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 8.66vw;
-  height: 4.38vw;
+  width: inherit;
+  height: inherit;
   z-index: 1;
   opacity: 0;
 }
@@ -138,8 +138,8 @@
   background-image: url("../images/voo.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 13.45vw;
-  height: 10.60vw;
+  width: inherit;
+  height: inherit;
   top: 1px;
   left: 1px;
   opacity: 0;
@@ -320,8 +320,8 @@ margin-right: 1.7vw;
   background-image: url("../images/venoo.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 9.57vw;
-  height: 10.66vw;
+  width: inherit;
+  height: inherit;
   top: -4px;
   left: -1px;
   opacity: 0;
@@ -379,7 +379,7 @@ margin-right: 1.7vw;
   width: 7.14vw;
   background-color: black;
 }
-.green {
+/* .green {
   position: relative;
   background: url("../images/green.svg");
   background-size: contain;
@@ -387,6 +387,39 @@ margin-right: 1.7vw;
   height: 6.25vw;
   background-repeat: no-repeat;
   margin-left: 1vw;
+} */
+.green {
+  position: absolute;
+  background: url("../images/green.svg");
+  background-size: contain;
+  width: 4.46vw;
+  height: 6.25vw;
+  background-repeat: no-repeat;
+  /* margin-left: 1vw; */
+}
+
+.leafone {
+  position: absolute;
+  background: url("../images/leafone.svg");
+  background-size: contain;
+  width: 2.14vw;
+  height: 2.08vw;
+  top: 3vh;
+  background-repeat: no-repeat;
+transform-origin: right bottom;
+transition: transform 0.5s;
+}
+.leaftwo {
+  position: absolute;
+  background: url("../images/leaftwo.svg");
+  background-size: contain;
+  width: 1.55vw;
+  height: 2.62vw;
+  background-repeat: no-repeat;
+left: 2.5vw;
+top: 0.5vh;
+transform-origin: 50% bottom;
+transition: transform 0.5s;
 }
 .bog {
   position: relative;
@@ -404,15 +437,17 @@ margin-right: 1.7vw;
   width: 2.86vw;
   height: 3.39vw;
 overflow: hidden;
-display: none;
-  opacity: 0;
   transition: 0.5s;
 }
 .cows {
   position: absolute;
+  display: none;
   /* background-color: blue; */
   width: 10vw;
     height: 16vh;
+}
+.block {
+  display: block;
 }
 .oh {
   left: 27.5vw;
@@ -438,10 +473,7 @@ display: none;
   from { background-position: 0 0; }
     to { background-position: 100% 0; }
 }
-.block {
-  opacity: 1;
-  display: block;
-}
+
 .fire {
   position: absolute;
   overflow: hidden;
@@ -740,7 +772,7 @@ display: none;
   position: absolute;
   left: 1.5vw;
 }
-h1 {
+.name h1 {
   margin-top: 15px;
   margin-bottom: 3px;
   font-family: Garamond;
@@ -879,11 +911,29 @@ transition: transform 0.5s ease;
 .info {
 position: absolute;
 width: 33.33vw;
-height: 100%;
+height: 100vh;
 background: #000000;
 left: -33.33vw;
 transition: 1s ease;
 opacity: 0;
+}
+.upperinfo {
+  position: relative;
+  margin-left: 1.85vw;
+  margin-right: 2.02vw;
+  margin-top: 2.32vw;
+  height: 3.69vw;
+  width: auto;
+}
+.info h2 {
+  font-family: Pragmatica;
+font-style: normal;
+font-weight: normal;
+font-size: 3.24vh;
+line-height: 2.62vw;
+color: #FFFFFF;
+margin-left: 1.85vw;
+margin-top: 0.45vw;
 }
 .cross {
   position: absolute;
@@ -892,17 +942,42 @@ opacity: 0;
   width: 2.08vw;
   height: 2.08vw;
   background-repeat: no-repeat;
-  right: 34px;
-  top: 51px;
+  right: 0;
+  bottom: 0.8vw;
+}
+.cross:hover {
+  opacity: 0.6;
 }
 .info h1 {
 position: absolute;
-left: 34px;
-top: 39px;;
+left: 0;
+bottom: 0;
 font-family: Garamond;
 font-style: normal;
 font-weight: bold;
-font-size: 55px;
-line-height: 62px;
+font-size: 3.27vw;
+line-height: 3.69vw;
 color: #FFFFFF;
+}
+.info p {
+  font-family: Pragmatica;
+font-style: normal;
+font-weight: normal;
+font-size: 1.01vw;
+line-height: 1.32vw;
+margin-left: 1.85vw;
+margin-right: 4.17vw;
+color: #FFFFFF;
+}
+.venusimg {
+  position: relative;
+  background: url("../images/venusinfo.svg");
+  background-size: contain;
+  width: 9.09vw;
+  height: 33.33vh;
+  background-repeat: no-repeat;
+  margin-left: 10.54vw;
+  margin-right: 13.57vw;
+  margin-top: 4.95vh;
+  margin-bottom: 4.95vh;
 }
