--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -441,10 +441,12 @@ overflow: hidden;
 }
 .cows {
   position: absolute;
+  opacity: 0;
   display: none;
   /* background-color: blue; */
   width: 10vw;
     height: 16vh;
+    transition: 0.5s ease;
 }
 .block {
   display: block;
@@ -674,8 +676,10 @@ overflow: hidden;
   width: 6.31vw;
   height: 5.65vw;
   background-repeat: no-repeat;
-  right: 25.4vw;
-  bottom: 10.7vh;
+  /* right: 25.4vw;
+  bottom: 10.7vh; */
+  right: 67vw;
+  top: 80vh;
 }
 .koliz {
   position: relative;
@@ -748,6 +752,12 @@ overflow: hidden;
   overflow: hidden;
   z-index:1;
 }
+.whaaat {
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  background-color: blue;
+}
 .ornament {
   background-image: url("../images/testtest.png");
   width: 100%;
@@ -819,6 +829,10 @@ height: 52px;
   animation: sun 0.6s steps(6);
   animation-play-state: paused;
   animation-fill-mode: forwards;
+  transition: 0.5s opacity;
+}
+.sun:hover {
+  opacity: 0.5;
 }
 
 @keyframes sun {
