--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -119,4 +119,11 @@ top: 41.5vh;
     width: 12.6vw;
       height: 8.8vw;
       left: 44.3vw;
-      top: 4.3vh;}
+      top: 4.3vh;
+    }
+      }
+@media only screen (max-width: 320px){
+      .whaaat {
+        background-color: red;
+      }
+}
