--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -628,7 +628,7 @@ overflow: hidden;
   width: 100vw;
   height: 100vh;
   position: absolute;
-  background: black;
+  background-color: rgba(0, 0, 0, 0.6);
   display: none;
 }
 
