--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,4 +1,120 @@
-@media only screen and (max-height: 950px) {
+@media only screen and (min-height: 400px) and (max-height: 846px) {
+.ornament {
+  background-image: url("../images/846.png");
+}
+.vo {
+  width: 12.6vw;
+    height: 8.8vw;
+    left: 44.3vw;
+    top: 4.3vh;
+  }
+  .ornament {
+    background-image: url("../images/950.png");
+  }
+  .co {
+    width: 4.81vw;
+      height: 5.42vw;
+      right: 21.5vw;
+      top: 11vh;
+  }
+  .kuzo{
+    width: 16.23vw;
+      height: 11.84vw;
+      right: 7vw;
+      top: 25vh;
+  }
+  .diso {
+    width: 10.71vw;
+  height: 7.8vw;
+  right: 0.4vw;
+  bottom: 38.3vh;
+  }
+  .veno {
+    width: 9.57vw;
+      height: 7.66vw;
+      right: 12.4vw;
+      bottom: 18.3vh;
+  }
+  .f6o {
+    width: 6.88vw;
+      height: 3.58vw;
+      right: 3vw;
+      bottom: 6.5vh;
+  }
+  .kolizo {
+    width: 12.83vw;
+      height: 6.03vw;
+      right: 28vw;
+      bottom: 32.7vh;
+  }
+  .cubo {
+    width: 11.69vw;
+  height: 8.16vw;
+  right: 21vw;
+  bottom: 5vh;
+  }
+  .f4o {
+    width: 7.06vw;
+      height: 4.49vw;
+      left: 50.54vw;
+      bottom: 10vh;
+  }
+  .sticko {
+    width: 13.06vw;
+      height: 8.68vw;
+      left: 26.8vw;
+      bottom: 6.4vh;
+  }
+  .f3o {
+    width: 6.01vw;
+  height: 4.84vw;
+  left: 35.9vw;
+  bottom: 29.15vh;
+  }
+  .homo {
+    width: 18.68vw;
+      height: 14.38vw;
+      left: -1.2vw;
+      bottom: -5.6vh;
+  }
+  .f2o {
+    width: 5.88vw;
+        height: 3.58vw;
+        left: 3.2vw;
+        bottom: 38.15vh;
+  }
+  .clotho {
+    width: 11.26vw;
+  height: 9.38vw;
+  left: 14.8vw;
+  bottom: 27vh;
+  }
+  .bogo {
+    width: 7.89vw;
+      height: 6.2vw;
+      left: 26vw;
+      top: 39.7vh;
+  }
+  .f1o {
+    width: 8.66vw;
+      height: 3.38vw;
+      left: 29.54vw;
+      top: 16.15vh;
+  }
+  .panto {
+    width: 8.47vw;
+  height: 6.5vw;
+  right: 46vw;
+  top: 41.5vh;
+  }
+  .f5o {
+    width: 7.04vw;
+      height: 5.1vw;
+      right: 26vw;
+      top: 39.5vh;
+  }
+}
+@media only screen and (min-height: 847px) and (max-height: 951px) {
 .ornament {
   background-image: url("../images/950.png");
 }
@@ -111,19 +227,123 @@ top: 41.5vh;
     top: 39.5vh;
 }
 }
-@media only screen and (max-height: 847px) {
-  .ornament {
-    background-image: url("../images/846.png");
-  }
-  .vo {
-    width: 12.6vw;
-      height: 8.8vw;
-      left: 44.3vw;
-      top: 4.3vh;
-    }
-      }
-@media only screen (max-width: 320px){
-      .whaaat {
-        background-color: red;
-      }
+@media only screen and (max-height: 768px) and (max-width: 1024px) {
+body, html {
+  width: 300vw;
+  height: 200vh;
+}
+}
+@media only screen and (min-height: 952px) and (max-height: 1080px) {
+.ornament {
+  background-image: url("../images/testtest.png");
+}
+
+.vo {
+  width: 12.6vw;
+    height: 9.8vw;
+    left: 44.03vw;
+    top: 4.3vh;
+}
+.co {
+  width: 4.81vw;
+    height: 5.42vw;
+    right: 21.5vw;
+    top: 11vh;
+}
+.kuzo{
+  width: 16.23vw;
+    height: 11.84vw;
+    right: 7vw;
+    top: 25vh;
+}
+.diso {
+  width: 10.71vw;
+height: 7.8vw;
+right: 0.4vw;
+bottom: 38.3vh;
+}
+.veno {
+  width: 9.57vw;
+    height: 7.66vw;
+    right: 12.4vw;
+    bottom: 18.3vh;
+}
+.f6o {
+  width: 6.88vw;
+    height: 3.58vw;
+    right: 3vw;
+    bottom: 6.5vh;
+}
+.kolizo {
+  width: 12.83vw;
+    height: 6.03vw;
+    right: 28vw;
+    bottom: 32.7vh;
+}
+.cubo {
+  width: 11.69vw;
+height: 8.16vw;
+right: 21vw;
+bottom: 5vh;
+}
+.f4o {
+  width: 7.06vw;
+    height: 4.49vw;
+    left: 50.54vw;
+    bottom: 10vh;
+}
+.sticko {
+  width: 13.06vw;
+    height: 8.68vw;
+    left: 26.8vw;
+    bottom: 6.4vh;
+}
+.f3o {
+  width: 6.01vw;
+height: 4.84vw;
+left: 35.9vw;
+bottom: 29.15vh;
+}
+.homo {
+  width: 18.68vw;
+    height: 14.38vw;
+    left: -1.2vw;
+    bottom: -5.6vh;
+}
+.f2o {
+  width: 5.88vw;
+      height: 3.58vw;
+      left: 3.2vw;
+      bottom: 38.15vh;
+}
+.clotho {
+  width: 11.26vw;
+height: 9.38vw;
+left: 14.8vw;
+bottom: 27vh;
+}
+.bogo {
+  width: 7.89vw;
+    height: 6.2vw;
+    left: 26vw;
+    top: 39.7vh;
+}
+.f1o {
+  width: 8.66vw;
+    height: 3.38vw;
+    left: 29.54vw;
+    top: 16.15vh;
+}
+.panto {
+  width: 8.47vw;
+height: 6.5vw;
+right: 46vw;
+top: 41.5vh;
+}
+.f5o {
+  width: 7.04vw;
+    height: 5.1vw;
+    right: 26vw;
+    top: 39.5vh;
+}
 }
