--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -228,10 +228,14 @@ top: 41.5vh;
 }
 }
 @media only screen and (max-height: 768px) and (max-width: 1024px) {
-/* .wrapper {
-  width: 300%;
-  height: 200%;
-} */
+.wrapper {
+  width: 960px;
+  height: 1136px;
+}
+body {
+  width: 100%;
+  height: 100%;
+}
 .name h1 {
   font-size: 6.3vw;
   margin-top: 7px;
