--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -232,9 +232,8 @@ top: 41.5vh;
   width: 960px;
   height: 1136px;
 }
-body {
-  width: 100%;
-  height: 100%;
+html, body {
+
 }
 .name h1 {
   font-size: 6.3vw;
