--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -250,23 +250,45 @@ body {
 .name {
   left: 6.5vw;
 }
-.suka {
-  position: fixed;
-  width: 90vw;
-  height: 5vw;
-  background-color: blue;
-  top: 0px;
-  left: 0px;
+.vulkan {
+  background-position: 0% 0%;
+  width: 48.5vw;
+    height: 46.95vw;
 }
-.bog, .girl, .gregre, .vulkan {
+.a {
+  width: 17vw;
+    height: 23.5vw;
+    left: 30.2%;
+    top: 12.5%;
+}
+.cows {
+  width: 71vw;
+  height: 40vh;
+}
+.oh {
+  left: 109.5vw;
+      top: 9vw;
+    }
+.bobo {
+left: 122vw;
+top: 59.2vh;
+      }
+.cow {
+      width: 27.86vw;
+    height: 33.39vw;
+    }
+.bog, .girl, .gregre {
   transform: scale(6);
 }
 .vuvu {
-  left: 215.3vw;
-    top: 20.1vw;
+  left: 200.3vw;
+    top: 0.1vw;
 }
 .sidepannel {
   /* position: fixed; */
+}
+.cursor, #line, #line2, .km {
+  display: none;
 }
 }
 @media only screen and (min-height: 952px) and (max-height: 1080px) {
