--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -238,7 +238,7 @@ body {
 }
 .name h1 {
   font-size: 16.3vw;
-  margin-top: 7px;
+  margin-top: 25px;;
 }
 .name p {
   margin-left: 8px;
@@ -246,6 +246,10 @@ body {
       font-size: 16px;
       line-height: 19px;
       width: 173px;
+}
+.white {
+  right: 221vw;
+    top: 70.9vh;
 }
 .name {
   left: 6.5vw;
